--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,12 +6,12 @@ services:
         ports:
           - 80:80
         links:
-          - codeign_mysql
+          - codeign_mariadb
         volumes:
           - /Users/yajaru/Documents/Web/www:/var/www/html
-    codeign_mysql:
-        image: mariadb:10.5.5
-        container_name: 'codeign_mysql'
+    codeign_mariadb:
+        image: mariadb:10.5.8
+        container_name: 'codeign_mariadb'
         ports:
           - 3306:3306
         volumes:
@@ -26,9 +26,9 @@ services:
         image: phpmyadmin/phpmyadmin:5.0.4
         container_name: 'codeign_phpmyadmin'
         links:
-          - codeign_mysql
+          - codeign_mariadb
         environment:
-          PMA_HOST: codeign_mysql
+          PMA_HOST: codeign_mariadb
           PMA_PORT: 3306
         ports:
           - 8081:80
